--- a/torch_env.yml
+++ b/torch_env.yml
@@ -6,96 +6,148 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - attrs=19.3.0=py_0
+  - backcall=0.1.0=py37_0
   - blas=1.0=mkl
-  - brotlipy=0.7.0=py38h1e0a361_1000
-  - ca-certificates=2020.4.5.1=hecc5488_0
+  - bleach=3.1.4=py_0
+  - brotlipy=0.7.0=py37h8f50634_1000
+  - ca-certificates=2020.1.1=0
   - catalogue=1.0.0=py_0
-  - certifi=2020.4.5.1=py38h32f6830_0
-  - cffi=1.14.0=py38hd463f26_0
-  - chardet=3.0.4=py38h32f6830_1006
-  - cryptography=2.9.2=py38h766eaa4_0
-  - cudatoolkit=10.2.89=hfd86e86_1
-  - cycler=0.10.0=py38_0
-  - cymem=2.0.3=py38h950e882_1
-  - cython-blis=0.4.1=py38h1e0a361_1
+  - certifi=2020.4.5.1=py37_0
+  - cffi=1.14.0=py37hd463f26_0
+  - chardet=3.0.4=py37hc8dfbb8_1006
+  - cryptography=2.9.2=py37hb09aad4_0
+  - cudatoolkit=10.1.243=h6bb024c_0
+  - cxxfilt=0.2.1=py37h3340039_1
+  - cycler=0.10.0=py37_0
+  - cymem=2.0.3=py37h3340039_1
+  - cython-blis=0.4.1=py37h8f50634_1
   - dbus=1.13.14=hb2f20db_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37_0
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
   - glib=2.63.1=h5a9c865_0
+  - gmp=6.1.2=h6c8ec71_1
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
   - icu=58.2=he6710b0_3
   - idna=2.9=py_1
-  - importlib-metadata=1.6.0=py38h32f6830_0
+  - importlib-metadata=1.6.0=py37hc8dfbb8_0
   - importlib_metadata=1.6.0=0
   - intel-openmp=2020.1=217
+  - ipykernel=5.1.4=py37h39e3cac_0
+  - ipython=7.13.0=py37h5ca1d4c_0
+  - ipython_genutils=0.2.0=py37_0
+  - ipywidgets=7.5.1=py_0
+  - jedi=0.17.0=py37_0
+  - jinja2=2.11.2=py_0
   - joblib=0.14.1=py_0
   - jpeg=9b=h024ee3a_2
-  - jsonschema=3.2.0=py38h32f6830_1
-  - kiwisolver=1.2.0=py38hfd86e86_0
+  - jsonschema=3.2.0=py37hc8dfbb8_1
+  - jupyter=1.0.0=py37_7
+  - jupyter_client=6.1.3=py_0
+  - jupyter_console=6.1.0=py_0
+  - jupyter_core=4.6.3=py37_0
+  - kiwisolver=1.2.0=py37hfd86e86_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_0
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
-  - matplotlib=3.1.3=py38_0
-  - matplotlib-base=3.1.3=py38hef1b27d_0
+  - markupsafe=1.1.1=py37h7b6447c_0
+  - matplotlib=3.1.3=py37_0
+  - matplotlib-base=3.1.3=py37hef1b27d_0
+  - mistune=0.8.4=py37h7b6447c_0
   - mkl=2020.1=217
-  - mkl-service=2.3.0=py38he904b0f_0
-  - mkl_fft=1.0.15=py38ha843d7b_0
-  - mkl_random=1.1.0=py38h962f231_0
-  - murmurhash=1.0.0=py38h950e882_0
+  - mkl-service=2.3.0=py37he904b0f_0
+  - mkl_fft=1.0.15=py37ha843d7b_0
+  - mkl_random=1.1.0=py37hd6b4f25_0
+  - more-itertools=8.2.0=py_0
+  - murmurhash=1.0.0=py37h3340039_0
+  - nbconvert=5.6.1=py37_0
+  - nbformat=5.0.6=py_0
   - ncurses=6.2=he6710b0_1
-  - ninja=1.9.0=py38hfd86e86_0
-  - numpy=1.18.1=py38h4f9e942_0
-  - numpy-base=1.18.1=py38hde5b4d6_1
-  - olefile=0.46=py_0
-  - openssl=1.1.1g=h516909a_0
-  - pandas=1.0.3=py38h0573a6f_0
+  - ninja=1.9.0=py37hfd86e86_0
+  - notebook=6.0.3=py37_0
+  - numpy=1.18.1=py37h4f9e942_0
+  - numpy-base=1.18.1=py37hde5b4d6_1
+  - nvidia-apex=0.1=py37hed6fefa_1
+  - olefile=0.46=py37_0
+  - openssl=1.1.1g=h7b6447c_0
+  - packaging=20.1=py_0
+  - pandas=1.0.3=py37h0573a6f_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - parso=0.7.0=py_0
   - pcre=8.43=he6710b0_0
-  - pillow=7.1.2=py38hb39fc2d_0
-  - pip=20.0.2=py38_3
-  - plac=0.9.6=py_1
-  - preshed=3.0.2=py38h950e882_2
+  - pexpect=4.8.0=py37_0
+  - pickleshare=0.7.5=py37_0
+  - pillow=7.1.2=py37hb39fc2d_0
+  - pip=20.0.2=py37_3
+  - plac=0.9.6=py37_0
+  - pluggy=0.13.1=py37hc8dfbb8_1
+  - preshed=3.0.2=py37h3340039_2
+  - prometheus_client=0.7.1=py_0
+  - prompt-toolkit=3.0.4=py_0
+  - prompt_toolkit=3.0.4=0
+  - ptyprocess=0.6.0=py37_0
+  - py=1.8.1=py_0
   - pycparser=2.20=py_0
+  - pygments=2.6.1=py_0
   - pyopenssl=19.1.0=py_1
   - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py38h05f1152_4
-  - pyrsistent=0.16.0=py38h1e0a361_0
-  - pysocks=1.7.1=py38h32f6830_1
-  - python=3.8.2=hcf32534_0
+  - pyqt=5.9.2=py37h05f1152_2
+  - pyrsistent=0.16.0=py37h8f50634_0
+  - pysocks=1.7.1=py37hc8dfbb8_1
+  - pytest=5.4.2=py37hc8dfbb8_0
+  - python=3.7.7=hcf32534_0_cpython
   - python-dateutil=2.8.1=py_0
-  - python_abi=3.8=1_cp38
-  - pytorch=1.5.0=py3.8_cuda10.2.89_cudnn7.6.5_0
+  - python_abi=3.7=1_cp37m
+  - pytorch=1.5.0=py3.7_cuda10.1.243_cudnn7.6.3_0
   - pytz=2020.1=py_0
+  - pyyaml=5.3.1=py37h8f50634_0
+  - pyzmq=18.1.1=py37he6710b0_0
   - qt=5.9.7=h5867ecd_1
+  - qtconsole=4.7.4=py_0
+  - qtpy=1.9.0=py_0
   - readline=8.0=h7b6447c_0
   - requests=2.23.0=pyh8c360ce_2
-  - scikit-learn=0.22.1=py38hd81dba3_0
-  - scipy=1.4.1=py38h0b6359f_0
+  - scikit-learn=0.22.1=py37hd81dba3_0
+  - scipy=1.4.1=py37h0b6359f_0
   - seaborn=0.10.1=py_0
-  - setuptools=46.2.0=py38_0
-  - sip=4.19.13=py38he6710b0_0
-  - six=1.14.0=py38_0
-  - spacy=2.2.4=py38hbf85e49_1
+  - send2trash=1.5.0=py37_0
+  - setuptools=46.2.0=py37_0
+  - sip=4.19.8=py37hf484d3e_0
+  - six=1.14.0=py37_0
+  - spacy=2.2.4=py37h99015e2_1
   - sqlite=3.31.1=h62c20be_1
-  - srsly=1.0.2=py38h950e882_0
-  - thinc=7.4.0=py38hbf85e49_2
+  - srsly=1.0.2=py37h3340039_0
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
+  - thinc=7.4.0=py37h99015e2_2
   - tk=8.6.8=hbc83047_0
-  - torchvision=0.6.0=py38_cu102
-  - tornado=6.0.4=py38h7b6447c_1
+  - torchvision=0.6.0=py37_cu101
+  - tornado=6.0.4=py37h7b6447c_1
   - tqdm=4.46.0=pyh9f0ad1d_0
+  - traitlets=4.3.3=py37_0
   - urllib3=1.25.9=py_0
   - wasabi=0.6.0=py_0
-  - wheel=0.34.2=py38_0
+  - wcwidth=0.1.9=pyh9f0ad1d_0
+  - webencodings=0.5.1=py37_1
+  - wheel=0.34.2=py37_0
+  - widgetsnbextension=3.5.1=py37_0
   - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.4=h516909a_0
+  - zeromq=4.3.1=he6710b0_3
   - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
